--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "minimum-stability": "dev",
     "version": "0.0.1",
     "require": {
-        "guzzlehttp/guzzle": "~6.2",
-        "phpunit/phpunit": "^6.5"
+        "php": ">=7.0",
+        "guzzlehttp/guzzle": "~6.2"
     },
     "autoload": {
         "psr-4": {
@@ -13,6 +13,12 @@
         }
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "^3.0@dev"
+        "squizlabs/php_codesniffer": "^3.0@dev",
+        "phpunit/phpunit": "^6.5"
+    },
+    "config": {
+        "platform": {
+            "php": "7.0"
+        }
     }
 }
