rename project in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "itallocosta/revolution-bar",
+    "name": "sympla/revolution-bar",
     "description": "Sdk para integração SDK RdStation",
     "minimum-stability": "dev",
     "version": "0.0.1",
